--- a/src/partials/head-icons.hbs
+++ b/src/partials/head-icons.hbs
@@ -1,1 +1,5 @@
     {{!-- <link rel="icon" href="{{{uiRootPath}}}/img/favicon.ico" type="image/x-icon"> --}}
+    <link rel="icon" href="{{{uiRootPath}}}/img/favicon.ico" sizes="any">
+    <link rel="icon" href="{{{uiRootPath}}}/img/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="{{{uiRootPath}}}/img/favicon/logo-192x192.png">
+    <link rel="manifest" href="{{{uiRootPath}}}/img/favicon/site.webmanifest">
