--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -1,7 +1,10 @@
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item" href="{{{or site.url siteRootPath}}}">{{site.title}}</a>
+      <a class="navbar-item" href="{{{or site.url siteRootPath}}}">
+        <img src="{{{uiRootPath}}}/img/favicon/logo-32x32.png" style="padding-right: 1rem"></img>
+        {{site.title}}
+      </a>
       {{#if env.SITE_SEARCH_PROVIDER}}
       <div class="navbar-item search hide-for-print">
         <div id="search-field" class="field">
@@ -17,7 +20,9 @@
     </div>
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
-        <a class="navbar-item" href="#">Home</a>
+        <!--
+        <a class="navbar-item" href="https://www.harmen.ch">Home</a>
+        <a class="navbar-item" href="https://docs.harmen.ch">Docs</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Products</a>
           <div class="navbar-dropdown">
@@ -39,6 +44,7 @@
             <a class="button is-primary" href="#">Download</a>
           </span>
         </div>
+        -->
       </div>
     </div>
   </nav>
