--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -134,13 +134,24 @@
   font-style: normal;
 }
 
+.doc .admonitionblock .icon i.fa {
+  font-family: var(--body-font-family) !important;
+}
+
+.doc mark {
+  font-size: 0.95em;
+  border-radius: 0.25em;
+  padding: 0.125em 0.25em;
+  background-color: var(--nord13);
+}
+
 .doc p code,
 .doc thead code,
 .doc .colist > table code {
   color: var(--code-font-color);
   background: var(--code-background);
   border-radius: 0.25em;
-  font-size: 0.95em;
+  font-size: 0.9em;
   padding: 0.125em 0.25em;
 }
 
@@ -150,7 +161,8 @@
 }
 
 .doc pre {
-  font-size: calc(16 / var(--rem-base) * 1rem);
+  /* font-size: calc(16 / var(--rem-base) * 1rem); */
+  font-size: 0.9em;
   line-height: 1.5;
   margin: 0;
 }
