--- a/src/partials/head-scripts.hbs
+++ b/src/partials/head-scripts.hbs
@@ -2,4 +2,5 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id={{this}}"></script>
     <script>function gtag(){dataLayer.push(arguments)};window.dataLayer=window.dataLayer||[];gtag('js',new Date());gtag('config','{{this}}')</script>
     {{/with}}
-    {{!-- <script>var uiRootPath = '{{{uiRootPath}}}'</script> --}}
+    <script src="https://kit.fontawesome.com/81313a52af.js" crossorigin="anonymous" defer="defer"></script>
+    <script>var uiRootPath = '{{{uiRootPath}}}'</script>
