--- a/src/partials/nav-explore.hbs
+++ b/src/partials/nav-explore.hbs
@@ -2,7 +2,9 @@
   {{#if page.component}}
   <div class="context">
     <span class="title">{{page.component.title}}</span>
+    {{#if page.componentVersion.version}}
     <span class="version">{{page.componentVersion.displayVersion}}</span>
+    {{/if}}
   </div>
   {{/if}}
   <ul class="components">
