feat: defined classes for the nord color palette and added three additional shades of grey to bridge the gap between nord3 and nord4

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -1,6 +1,9 @@
 @import "typeface-roboto.css";
 @import "typeface-roboto-mono.css";
+@import "nord-vars.css";
 @import "nord.css";
+@import "harmen-vars.css";
+@import "harmen.css";
 @import "vars.css";
 @import "base.css";
 @import "body.css";
